Bug 342389 - Unable to mark packages for re-install
Summary: Unable to mark packages for re-install
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: 2.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-01 15:13 UTC by Twisted Lucidity
Modified: 2016-04-15 19:16 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Twisted Lucidity 2015-01-01 15:13:57 UTC
The list context menu does not allow a package to bre re-installed.

Reproducible: Always

Steps to Reproduce:
1. Open muon and select any installed package.
2. Right-click the package

Actual Results:  
"Mark for reinstall" is not enabled.

Expected Results:  
"Mark for reinstall" to be enabled.
Comment 1 Twisted Lucidity 2015-01-01 15:26:54 UTC
Crude workaround:

1. Open muon
2. Select the desired package and any other installed package
3. Right-click
4. Mark them for reinstallation

Note: the packages cannot now be unmarked, see bug 348390
Comment 2 James W 2015-01-01 22:20:32 UTC
Hi there,
How are the steps you gave a crude workaround? It seems quite intuitive to me.
And I think you mean bug 342390 instead of bug 348390?

(note: I'm a Google Code-in student)
Comment 3 Twisted Lucidity 2015-01-02 08:59:15 UTC
It's a crude workaround because I can't just right-click installed package A and select "Mark for reinstall", I have to select at least two packages (A and B) to get the ability to select reinstall.

This means doing extra, unnecessary work and makes it appear at first glance that Muon does not permit package to be re-installed. The "trick" of selecting an extra installed package isn't obvious.

Other workarounds a would be "sudo apt-get install --reinstall package-A" or "sudo aptitude" and going from there.

And you are correct, I did mean bug 342390.
Comment 4 James W 2015-01-02 18:23:07 UTC
Ah, I see. That is rather awkward.
Comment 5 Carlo Vanini 2016-04-15 19:16:30 UTC
Git commit 6db42277651409eeb92fa4f67c64f85434db387e by Carlo Vanini.
Committed on 15/04/2016 at 17:30.
Pushed by vanini into branch 'master'.

Fix "ReInstall" action not being enabled.

Fix mark/Unmark for ReInstall of a package.

Testing Done:
* select an installed package
* mark for re-install
* mark for keep or click Undo
Related: bug 342390
REVIEW: 127545

M  +5    -1    src/backend.cpp
M  +4    -1    src/package.cpp

http://commits.kde.org/libqapt/6db42277651409eeb92fa4f67c64f85434db387e