Fix "ReInstall" action not being enabled.

Fix mark/Unmark for ReInstall of a package.

Testing Done:
* select an installed package
* mark for re-install
* mark for keep or click Undo

BUG: 342389
BUG: 342390
REVIEW: 127545